conv-api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conv-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      link_converter: backend
  template:
    metadata:
      name: conv-api
      labels:
        link_converter: backend
    spec:
      containers:
      - name: conv-api
        image: antonlarichev/conv-api:1.0
        resources:
          limits:
            memory: "300Mi"
            cpu: "500m"
        ports:
          - containerPort: 80
        volumeMounts:
          - name: conv-api-data
            mountPath: /opt/app/uploads
            subPath: conv-api
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 15   # Ждем 15 сек перед первой проверкой (время на запуск)
          periodSeconds: 10         # Проверяем каждые 10 секунд
          timeoutSeconds: 5         # Если нет ответа за 5 сек, считаем провалом
          failureThreshold: 3       # 3 провала подряд = перезагрузка контейнера
          successThreshold: 1       # 1 успех считается достаточным (по умолчанию)
      volumes:
      - name: conv-api-data
        persistentVolumeClaim:
          claimName: conv-api-pvc
