converter-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: converter-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      link_converter: converter
  template:
    metadata:
      name: converter
      labels:
        link_converter: converter
    spec:
      containers:
      - name: converter
        image: antonlarichev/conv-service:1.0
        resources:
          limits:
            memory: "400Mi"
            cpu: "2000m"
