pod_conv-app.yml
apiVersion: v1
kind: Pod
metadata:
  name: conv-app
  labels:
    link_converter: frontend
spec:
  containers:
  - name: conv-app
    image: antonlarichev/conv-app:1.2
    resources:
      limits:
        memory: "300Mi"
        cpu: "500m"
    ports:
      - containerPort: 80
