conv-app-service copy.yml
apiVersion: v1
kind: Service
metadata:
  name: conv-api-clusterip
spec:
  selector:
    link_converter: backend
  ports:
  - port: 80
    protocol: TCP
