conv-app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: conv-app-clusterip
spec:
  selector:
    link_converter: frontend
  ports:
  - port: 80
    protocol: TCP
