converter-service.yml
apiVersion: v1
kind: Service
metadata:
  name: converter-clusterip
spec:
  selector:
    link_converter: converter
