node-port.yml
apiVersion: v1
kind: Service
metadata:
  name: conv-app-port
spec:
  type: NodePort
  selector:
    link_converter: frontend
  ports:
  - port: 3001
    targetPort: 80
    nodePort: 31000
