rabbitmq-service.yml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-clusterip
spec:
  selector:
    link_converter: rabbitmq
  ports:
  - port: 15672
    protocol: TCP
  - port: 5672
    protocol: TCP
